--- a/dashboard.html
+++ b/dashboard.html
@@ -17,6 +17,7 @@
     <!-- User's GitHub entries will be displayed here -->
 </div>
 
+    <script>
 document.getElementById('loginButton').addEventListener('click', () => {
    
   const client_id = "933803271171223552";  // Don't put the secret here!
@@ -27,7 +28,7 @@ document.getElementById('loginButton').addEventListener('click', () => {
 
 
 });
-
+</script>
 
 </body>
 </html>
