--- a/lobus.html
+++ b/lobus.html
@@ -6,28 +6,40 @@
     <title>Blöcke-Editor</title>
     <link rel="stylesheet" href="styles.css">
   <style>
-    .container {
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f0f0f0;
+}
+
+.container {
     display: flex;
     height: 100vh;
 }
 
 .block-selection {
     width: 20%;
-    border-right: 1px solid black;
+    border-right: 1px solid #ccc;
     padding: 20px;
     overflow-y: auto;
 }
 
 .block {
     margin-bottom: 10px;
-    padding: 5px;
-    border: 1px solid black;
+    padding: 5px 10px;
+    border: 1px solid #ccc;
     cursor: pointer;
+    background-color: #fff;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+}
+
+.block:hover {
+    background-color: #e5e5e5;
 }
 
 .workspace {
     width: 60%;
-    border-right: 1px solid black;
+    border-right: 1px solid #ccc;
     padding: 20px;
     position: relative;
 }
@@ -42,7 +54,10 @@
 .block-area {
     margin-top: 50px;
     height: calc(100% - 50px);
-    border: 1px dashed grey;
+    border: 1px dashed #ccc;
+    border-radius: 5px;
+    padding: 10px;
+    background-color: #fff;
 }
 
 .code-pane {
@@ -51,7 +66,8 @@
     overflow-y: auto;
     transform: translateX(100%);
     transition: transform 0.3s ease;
-    background-color: #f5f5f5;
+    background-color: #e5e5e5;
+    border-left: 1px solid #ccc;
 }
 
 .code-pane.active {
@@ -64,8 +80,8 @@
     <div class="container">
         <div class="block-selection">
             <!-- Beispiel für Blöcke -->
-            <div class="block" draggable="true">Block 1</div>
-            <div class="block" draggable="true">Block 2</div>
+            <div class="block" draggable="true" data-code="CodeBlock1">Block 1</div>
+            <div class="block" draggable="true" data-code="CodeBlock2">Block 2</div>
         </div>
         <div class="workspace">
             <div class="page-controls">
@@ -73,25 +89,63 @@
                 <!-- Beispielseite -->
                 <button class="page-command">Seite 1</button>
             </div>
-            <div class="block-area">
+            <div class="block-area" id="blockArea">
                 <!-- Hier können die Blöcke abgelegt werden -->
             </div>
         </div>
-        <div class="code-pane">
+        <div class="code-pane" id="codePane">
             <!-- Hier wird der zusammengesetzte Code angezeigt -->
         </div>
     </div>
     <script>
-      // Dies ist nur ein einfacher Grundbaustein und erfordert viel zusätzliche Funktionalität.
-
-document.getElementById('addPage').addEventListener('click', function() {
+      document.getElementById('addPage').addEventListener('click', function() {
     const newButton = document.createElement('button');
     newButton.innerText = 'Neue Seite';
     newButton.classList.add('page-command');
     document.querySelector('.page-controls').appendChild(newButton);
 });
 
-// Logik zum Draggable und Droppable, Code-Anzeige, usw. müssen noch implementiert werden.
+const blockArea = document.getElementById('blockArea');
+const codePane = document.getElementById('codePane');
+
+// Drag-Logik
+document.querySelectorAll('.block').forEach(block => {
+    block.addEventListener('dragstart', function(e) {
+        e.dataTransfer.setData('text/plain', e.target.dataset.code);
+        e.dataTransfer.dropEffect = 'move';
+    });
+});
+
+blockArea.addEventListener('dragover', function(e) {
+    e.preventDefault();
+    e.dataTransfer.dropEffect = 'move';
+});
+
+blockArea.addEventListener('drop', function(e) {
+    e.preventDefault();
+
+    const code = e.dataTransfer.getData('text/plain');
+    const newBlock = document.querySelector(`[data-code="${code}"]`).cloneNode(true);
+
+    blockArea.appendChild(newBlock);
+
+    updateCodePane();
+});
+
+function updateCodePane() {
+    codePane.innerHTML = '';
+    document.querySelectorAll('#blockArea .block').forEach(block => {
+        const code = block.dataset.code;
+        const codeElement = document.createElement('div');
+        codeElement.textContent = code;
+        codePane.appendChild(codeElement);
+    });
+}
+
+// Zum Anzeigen des Code-Bereichs
+setTimeout(() => {
+    codePane.classList.add('active');
+}, 2000);
 
     </script>
 </body>
