--- a/lobus.html
+++ b/lobus.html
@@ -118,39 +118,15 @@ document.getElementById('addPage').addEventListener('click', function() {
     const newBlockArea = document.createElement('div');
     newBlockArea.classList.add('block-area', 'hidden');
     blockArea.parentElement.appendChild(newBlockArea);
-
-    // Drag and Drop Ereignisse für den neuen Block-Bereich hinzufügen
-    addDragAndDropEvents(newBlockArea);
 });
 
-function addDragAndDropEvents(area) {
-    area.addEventListener('dragover', function(e) {
-        e.preventDefault();
-        e.dataTransfer.dropEffect = 'move';
-    });
-
-    area.addEventListener('drop', function(e) {
-        e.preventDefault();
-
-        const code = e.dataTransfer.getData('text/plain');
-        const sourceBlock = document.querySelector(`[data-code="${code}"]`);
-        if (sourceBlock.parentElement && sourceBlock.parentElement.classList.contains('block-area')) {
-            return;
-        }
-        
-        const newBlock = sourceBlock.cloneNode(true);
         newBlock.addEventListener('contextmenu', function(event) {
-            event.preventDefault();
-            newBlock.remove();
-            updateCodePane();
-        });
-        area.appendChild(newBlock);
-        updateCodePane();
-    });
-}
+    event.preventDefault();  // Verhindert das Anzeigen des Standard-Kontextmenüs
+    newBlock.remove();      // Entfernt den Block
+    updateCodePane();       // Aktualisiert den Code-Bereich
+});
 
 const blockAreas = document.querySelectorAll('.block-area');
-blockAreas.forEach(area => addDragAndDropEvents(area));
 
 
     
