--- a/lobus.html
+++ b/lobus.html
@@ -209,6 +209,38 @@ blockAreas.forEach(area => {
     });
 });
 
+        // ... Ihr bisheriger JavaScript-Code ...
+
+// Das 'dragover'-Ereignis ermöglicht es uns, ein Element als Drop-Ziel zu definieren
+document.querySelectorAll('.if-content').forEach(ifContent => {
+    ifContent.addEventListener('dragover', function(e) {
+        e.preventDefault();
+        e.dataTransfer.dropEffect = 'move';
+    });
+
+    // Wenn ein Block in den '.if-content'-Bereich gezogen wird
+    ifContent.addEventListener('drop', function(e) {
+        e.preventDefault();
+
+        const code = e.dataTransfer.getData('text/plain');
+        const sourceBlock = document.querySelector(`[data-code="${code}"]`);
+
+        if (sourceBlock.parentElement && sourceBlock.parentElement.classList.contains('block-area')) {
+            return;
+        }
+
+        const newBlock = sourceBlock.cloneNode(true);
+        newBlock.addEventListener('contextmenu', function(event) {
+            event.preventDefault();
+            newBlock.remove();
+            updateCodePane(); // Aktualisiert den Code-Bereich
+        });
+
+        ifContent.appendChild(newBlock); // Fügen Sie den neuen Block in den '.if-content'-Bereich ein
+        updateCodePane();
+    });
+});
+
 // Zum Löschen von Blöcken, wenn sie außerhalb der Ablagebereiche abgelegt werden
 document.body.addEventListener('drop', function(e) {
     e.preventDefault();
