--- a/lcord.html
+++ b/lcord.html
@@ -9,7 +9,8 @@
 <body>
 
   <style>
-    body {
+      
+body {
     font-family: Arial, sans-serif;
     background-color: #181818;
     color: #e0e0e0;
@@ -76,6 +77,49 @@
     overflow-y: auto;
     border-left: 1px solid #444;
 }
+
+      /* ... bisheriger CSS-Code ... */
+
+.container {
+    display: flex;
+    height: 100vh;
+    flex-direction: row;
+}
+
+.block-selection {
+    flex: 1;
+    max-width: 20%;  /* Maximale Breite festlegen */
+    min-width: 15%;  /* Minimale Breite festlegen */
+    overflow-y: auto;
+    padding: 20px;
+    border-right: 1px solid #444;
+}
+
+.workspace {
+    flex: 3;  /* Das Dreifache des Raums im Vergleich zur block-selection */
+    padding: 20px;
+    border-right: 1px solid #444;
+}
+
+.block-area {
+    margin-top: 20px;
+    height: calc(100vh - 100px);  /* Raum für andere Elemente lassen */
+    border: 1px dashed #444;
+    border-radius: 5px;
+    padding: 20px;  /* Mehr Innenabstand */
+    background-color: #181818;
+    overflow-y: auto;  /* Ermöglicht das Scrollen, wenn viele Blöcke hinzugefügt werden */
+}
+
+.code-pane {
+    flex: 1;
+    max-width: 25%;  /* Maximale Breite festlegen */
+    min-width: 20%;  /* Minimale Breite festlegen */
+    overflow-y: auto;
+    padding: 20px;
+    border-left: 1px solid #444;
+}
+
 
   </style>
     <div class="container">
