--- a/lcord.html
+++ b/lcord.html
@@ -129,11 +129,12 @@ body {
             <div class="block" draggable="true" data-code="alert('Hello!');">Alert</div>
             <div class="block" draggable="true" data-code="console.log('Logged!');">Console Log</div>
             <div class="block" draggable="true" data-code="var x = 10;">Set Variable</div>
-            <div class="block if-block" draggable="true" data-code="ifCode">
-                <div class="if-top">If () {</div>
-                <div class="if-content"></div>
-                <div class="if-bottom">}</div>
-            </div>
+            <div class="block if-block" draggable="true" data-code="if (condition) {">
+    <div class="if-top">If</div>
+    <div class="if-content"></div>
+    <div class="if-bottom">}</div>
+</div>
+
         </div>
         <div class="workspace">
             <div class="block-area" id="blockArea"></div>
