--- a/lcord.html
+++ b/lcord.html
@@ -195,16 +195,22 @@ document.addEventListener('DOMContentLoaded', () => {
     codePane.innerHTML = '';
     document.querySelectorAll('.block-area:not(.hidden) .block').forEach(block => {
         let code = block.dataset.code;
+        
         if (block.classList.contains('if-block')) {
             const innerBlocks = block.querySelector('.if-content').childNodes;
             let innerCode = Array.from(innerBlocks).map(b => b.dataset.code).join('\n\t');
             code += '\n\t' + innerCode + '\n}';
+        } else if (block.parentElement.classList.contains('if-content')) {
+            // Wenn es ein innerer Block eines if-Blocks ist, überspringen Sie diesen Block
+            return;
         }
+
         const codeElement = document.createElement('div');
         codeElement.textContent = code;
         codePane.appendChild(codeElement);
     });
 }
+
 
 
     document.querySelectorAll('.block').forEach(block => {
