--- a/lcord.html
+++ b/lcord.html
@@ -182,14 +182,18 @@ document.addEventListener('DOMContentLoaded', () => {
         updateCodePane();
     }
 
-    function addBlockEventListeners(block) {
-        block.addEventListener('dragstart', handleDragStart);
-        block.addEventListener('contextmenu', function(e) {
+   function addBlockEventListeners(block) {
+    block.addEventListener('dragstart', handleDragStart);
+    block.addEventListener('contextmenu', function(e) {
+        // Überprüfen Sie, ob sich der Block im Arbeitsbereich befindet
+        if (block.parentElement && block.parentElement.classList.contains('block-area')) {
             e.preventDefault();
             block.remove();
             updateCodePane();
-        });
-    }
+        }
+    });
+}
+
 
     function updateCodePane() {
     codePane.innerHTML = '';
