--- a/lcord.html
+++ b/lcord.html
@@ -126,7 +126,8 @@ body {
         <div class="block-selection">
             <div class="block" draggable="true" data-code="CodeBlock1">Block 1</div>
             <div class="block" draggable="true" data-code="CodeBlock2">Block 2</div>
-            <div class="block" draggable="true" data-code="alert('Hello!');">Alert</div>
+            <div class="block" draggable="true" data-code="alert('Hello!');
+">Alert</div>
             <div class="block" draggable="true" data-code="console.log('Logged!');">Console Log</div>
             <div class="block" draggable="true" data-code="var x = 10;">Set Variable</div>
             <div class="block if-block" draggable="true" data-code="if (condition) {">
