--- a/lcord.html
+++ b/lcord.html
@@ -126,8 +126,7 @@ body {
         <div class="block-selection">
             <div class="block" draggable="true" data-code="CodeBlock1">Block 1</div>
             <div class="block" draggable="true" data-code="CodeBlock2">Block 2</div>
-            <div class="block" draggable="true" data-code="alert('Hello!');
-">Alert</div>
+            <div class="block" draggable="true" data-code="alert('Hello!');">Alert</div>
             <div class="block" draggable="true" data-code="console.log('Logged!');">Console Log</div>
             <div class="block" draggable="true" data-code="var x = 10;">Set Variable</div>
             <div class="block if-block" draggable="true" data-code="if (condition) {">
@@ -208,11 +207,11 @@ function addBlockEventListeners(block) {
 
 
 
-    function updateCodePane() {
+   function updateCodePane() {
     codePane.innerHTML = '';
     document.querySelectorAll('.block-area:not(.hidden) .block').forEach(block => {
         let code = block.dataset.code;
-        
+
         if (block.classList.contains('if-block')) {
             const innerBlocks = block.querySelector('.if-content').childNodes;
             let innerCode = Array.from(innerBlocks).map(b => b.dataset.code).join('\n\t');
@@ -222,11 +221,15 @@ function addBlockEventListeners(block) {
             return;
         }
 
+        // Zeilenumbruch am Ende eines jeden Blocks hinzufügen
+        code += '\n';
+
         const codeElement = document.createElement('div');
         codeElement.textContent = code;
         codePane.appendChild(codeElement);
     });
 }
+
 
 
 
