--- a/lcord.html
+++ b/lcord.html
@@ -122,18 +122,26 @@ body {
 
 
   </style>
-    <div class="container">
-        <div class="block-selection">
-            <div class="block" draggable="true" data-code="CodeBlock1">Block 1</div>
-            <div class="block" draggable="true" data-code="CodeBlock2">Block 2</div>
-            <div class="block" draggable="true" data-code="alert('Hello!');">Alert</div>
-            <div class="block" draggable="true" data-code="console.log('Logged!');">Console Log</div>
-            <div class="block" draggable="true" data-code="var x = 10;">Set Variable</div>
-            <div class="block if-block" draggable="true" data-code="if (condition) {">
-    <div class="if-top">If</div>
-    <div class="if-content"></div>
-    <div class="if-bottom">}</div>
+   <div class="container">
+    <div class="block-selection">
+        <div class="block" draggable="true" data-code="alert('MESSAGE');">
+            Alert: <span class="editable-content" data-editable-type="string">Hello!</span>
+        </div>
+        <div class="block" draggable="true" data-code="console.log('MESSAGE');">
+            Console Log: <span class="editable-content" data-editable-type="string">Logged!</span>
+        </div>
+        <div class="block" draggable="true" data-code="var VARIABLE = VALUE;">
+            Set <span class="editable-content" data-editable-type="variable">x</span> = <span class="editable-content" data-editable-type="value">10</span>
+        </div>
+        <div class="block if-block" draggable="true" data-code="if (CONDITION) {">
+            If (<span class="editable-content" data-editable-type="condition">condition</span>)
+            <div class="if-top">If</div>
+            <div class="if-content"></div>
+            <div class="if-bottom">}</div>
+        </div>
+    </div>
 </div>
+
 
         </div>
         <div class="workspace">
@@ -245,6 +253,39 @@ function addBlockEventListeners(block) {
     document.querySelectorAll('.block-area').forEach(area => {
         area.addEventListener('dragover', e => e.preventDefault());
         area.addEventListener('drop', handleDropOnBlockArea);
+    });
+});
+
+        document.querySelectorAll('.editable-content').forEach(el => {
+    el.addEventListener('click', function() {
+        const currentText = el.textContent;
+        const inputType = el.getAttribute('data-editable-type');
+
+        let inputElement;
+        if (inputType === "string" || inputType === "variable" || inputType === "value") {
+            inputElement = document.createElement('input');
+            inputElement.value = currentText;
+        } else if (inputType === "condition") {
+            inputElement = document.createElement('select');
+            const options = ["true", "false", "x > 10", "y < 5"];
+            options.forEach(option => {
+                const optionElement = document.createElement('option');
+                optionElement.value = option;
+                optionElement.textContent = option;
+                if (currentText === option) optionElement.selected = true;
+                inputElement.appendChild(optionElement);
+            });
+        }
+
+        el.textContent = '';
+        el.appendChild(inputElement);
+
+        inputElement.focus();
+        inputElement.addEventListener('blur', function() {
+            const newValue = inputElement.value;
+            el.removeChild(inputElement);
+            el.textContent = newValue;
+        });
     });
 });
 
