--- a/lcord.html
+++ b/lcord.html
@@ -120,16 +120,6 @@ body {
     border-left: 1px solid #444;
 }
 
-.if-block {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.editable-content {
-    margin-bottom: 10px;
-}
-
   </style>
    <div class="container">
     <div class="block-selection">
@@ -142,12 +132,12 @@ body {
         <div class="block" draggable="true" data-code="var VARIABLE = VALUE;">
             Set <span class="editable-content" data-editable-type="variable">x</span> = <span class="editable-content" data-editable-type="value">10</span>
         </div>
-        <div class="block if-block" draggable="true">
-    If (<span class="editable-content" data-editable-type="condition">condition</span>):
-    <div class="if-top">If</div>
+        <div class="block if-block" draggable="true" data-code="if (CONDITION) {">
+    <div class="if-top">If (<span class="editable-content" data-editable-type="condition">condition</span>)</div>
     <div class="if-content"></div>
     <div class="if-bottom">}</div>
 </div>
+
 
     </div>
 </div>
