--- a/lcord.html
+++ b/lcord.html
@@ -133,7 +133,7 @@ body {
             Set <span class="editable-content" data-editable-type="variable">x</span> = <span class="editable-content" data-editable-type="value">10</span>
         </div>
         <div class="block if-block" draggable="true" data-code="if (CONDITION) {">
-    <div class="if-top">If (<span class="editable-content" data-editable-type="condition">condition</span>)</div>
+    <div class="if-top">If (<span class="editable-content" data-editable-type="condition">condition</span>) {</div>
     <div class="if-content"></div>
     <div class="if-bottom">}</div>
 </div>
