--- a/lcord.html
+++ b/lcord.html
@@ -336,18 +336,8 @@ document.querySelectorAll('.editable-content').forEach(span => {
 
 
 
- document.querySelectorAll('.block').forEach(block => {
-    block.addEventListener('dragover', e => e.stopPropagation());
-    block.addEventListener('drop', e => e.stopPropagation());
-});
-
-
-    document.querySelectorAll('.if-content').forEach(content => {
-        content.addEventListener('dragover', e => e.preventDefault());
-        content.addEventListener('drop', handleDropOnIfContent);
-    });
-
-   document.querySelectorAll('.block-area, .if-content').forEach(area => {
+   // Fügen Sie dieses Stück Code hinzu:
+document.querySelectorAll('.block-area, .if-content').forEach(area => {
     area.addEventListener('dragover', e => {
         e.preventDefault();
         e.stopPropagation();
@@ -361,6 +351,7 @@ document.querySelectorAll('.editable-content').forEach(span => {
         }
     });
 });
+
 
 
 
