--- a/editor.html
+++ b/editor.html
@@ -8,28 +8,38 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f5f5f5;
-            margin: 20px;
+            background-color: #181818;
+            color: #e0e0e0;
         }
 
-        .block-creation {
-            margin-bottom: 20px;
+        .container {
+            padding: 20px;
+        }
+
+        textarea, button {
+            margin-top: 10px;
         }
 
         .block-list {
             display: flex;
             flex-wrap: wrap;
             gap: 20px;
+            margin-top: 20px;
         }
 
         .block {
             padding: 10px;
             border: 1px solid #ccc;
-            background-color: #fff;
+            background-color: #383838;
             border-radius: 5px;
             cursor: pointer;
             display: flex;
             flex-direction: column;
+            width: 300px;
+        }
+
+        .block:hover {
+            background-color: #484848;
         }
 
         .block-part {
@@ -37,73 +47,120 @@
         }
 
         .editable {
-            border: 1px dashed #333;
+            border: 1px dashed #e0e0e0;
             padding: 2px 5px;
             display: inline-block;
             margin: 0 3px;
+            color: #e0e0e0;
+            background-color: #282828;
+        }
+
+        .editable:hover {
+            background-color: #383838;
+        }
+
+        .block-code {
+            margin-top: 10px;
+            font-family: monospace;
+            color: #00cc66;
         }
     </style>
 </head>
 
 <body>
 
-    <div class="block-creation">
-        <h2>Erstelle einen neuen Block:</h2>
-        Block-Struktur (Verwenden Sie {...} für Block-Inhalte und [...] für editierbare Bereiche):<br>
-        <textarea id="blockStructure" rows="5" cols="50" placeholder="z.B. 'try {...} catch ([e]) {...}'"></textarea><br>
-        <button onclick="createBlock()">Block erstellen</button>
-    </div>
+<div class="container">
+    <h2>Erstelle einen neuen Block:</h2>
+    Block-Struktur (Verwenden Sie {...} für Block-Inhalte und [...] für editierbare Bereiche):<br>
+    <textarea id="blockStructure" rows="3" cols="50" placeholder="z.B. 'try {...} catch ([e]) {...}'"></textarea><br>
+    Code (optional):<br>
+    <textarea id="blockCode" rows="3" cols="50"></textarea><br>
+    <button onclick="createBlock()">Block erstellen</button>
 
-    <div class="block-list" id="blockList">
-        <!-- Hier werden die erstellten Blöcke angezeigt -->
-    </div>
+    <div class="block-list" id="blockList"></div>
 
-    <script>
-        function createBlock() {
-            const blockList = document.getElementById('blockList');
-            const blockStructureTextarea = document.getElementById('blockStructure');
-            const blockStructure = blockStructureTextarea.value;
+    <button onclick="exportBlocks()">Blöcke als JSON exportieren</button>
+    <pre id="exportOutput"></pre>
+</div>
 
-            // Überprüfen, ob der Block-Inhalt eingegeben wurde
-            if (!blockStructure.trim()) {
-                alert('Bitte geben Sie die Blockstruktur ein.');
-                return;
+<script>
+    function createBlock() {
+        const blockList = document.getElementById('blockList');
+        const blockStructureTextarea = document.getElementById('blockStructure');
+        const blockCodeTextarea = document.getElementById('blockCode');
+        const blockStructure = blockStructureTextarea.value;
+        const blockCode = blockCodeTextarea.value;
+
+        if (!blockStructure.trim()) {
+            alert('Bitte geben Sie die Blockstruktur ein.');
+            return;
+        }
+
+        const block = document.createElement('div');
+        block.className = 'block';
+
+        const parts = blockStructure.split(/{(.*?)}/);
+
+        parts.forEach((part, index) => {
+            const blockPart = document.createElement('div');
+            blockPart.className = 'block-part';
+
+            if (index % 2 === 0) {
+                const subParts = part.split(/\[(.*?)\]/);
+                subParts.forEach((subPart, subIndex) => {
+                    if (subIndex % 2 === 0) {
+                        blockPart.appendChild(document.createTextNode(subPart));
+                    } else {
+                        const editable = document.createElement('span');
+                        editable.className = 'editable';
+                        editable.textContent = subPart;
+                        editable.contentEditable = true;
+                        blockPart.appendChild(editable);
+                    }
+                });
+            } else {
+                blockPart.textContent = "...";
             }
 
-            const block = document.createElement('div');
-            block.className = 'block';
+            block.appendChild(blockPart);
+        });
 
-            const parts = blockStructure.split(/{(.*?)}/);
+        const blockCodeElement = document.createElement('div');
+        blockCodeElement.className = 'block-code';
+        blockCodeElement.textContent = blockCode || 'Hier kommt dein Code hin!';
+        block.appendChild(blockCodeElement);
 
-            parts.forEach((part, index) => {
-                const blockPart = document.createElement('div');
-                blockPart.className = 'block-part';
+        blockList.appendChild(block);
+        blockStructureTextarea.value = '';
+        blockCodeTextarea.value = '';
+    }
 
-                if (index % 2 === 0) {
-                    // Textbereiche zwischen {...}
-                    const subParts = part.split(/\[(.*?)\]/);
-                    subParts.forEach((subPart, subIndex) => {
-                        if (subIndex % 2 === 0) {
-                            blockPart.appendChild(document.createTextNode(subPart));
-                        } else {
-                            const editable = document.createElement('span');
-                            editable.className = 'editable';
-                            editable.textContent = subPart;
-                            editable.contentEditable = true;
-                            blockPart.appendChild(editable);
+    function exportBlocks() {
+        const blocks = [];
+        document.querySelectorAll('.block').forEach(blockElement => {
+            const structure = [];
+            blockElement.querySelectorAll('.block-part').forEach(partElement => {
+                if (partElement.textContent.trim() === '...') {
+                    structure.push('{...}');
+                } else {
+                    let text = '';
+                    partElement.childNodes.forEach(node => {
+                        if (node.nodeType === Node.TEXT_NODE) {
+                            text += node.textContent;
+                        } else if (node.classList.contains('editable')) {
+                            text += `[${node.textContent}]`;
                         }
                     });
-                } else {
-                    blockPart.textContent = "...";
+                    structure.push(text);
                 }
-
-                block.appendChild(blockPart);
             });
+            const blockCode = blockElement.querySelector('.block-code').textContent;
+            blocks.push({structure: structure.join(' '), code: blockCode});
+        });
 
-            blockList.appendChild(block);
-            blockStructureTextarea.value = '';  // Textarea zurücksetzen
-        }
-    </script>
+        document.getElementById('exportOutput').textContent = JSON.stringify(blocks, null, 2);
+    }
+</script>
 
 </body>
 
